# simple-cpp-raytracer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  Makefile~  README.md  main  test.ppm
doc/: .gitignore  Doxyfile
include/: RaytracerConfig.h  RaytracerConfig.h.in  camera.h  geometry.h  light.h  material.h  parser.h  ppm.h  raytracer.h  siene.h  surface.h  utils.h
sample_scenes/: README.md  bunny.xml  cornellbox.xml  mirror_spheres.xml  simple.xml  simple_reflectance.xml  simple_shading.xml
sample_scenes/dragon_lowres/: dragon_lowres.xml
sample_scenes/sample_outputs/: .gitignore
src/: CMakeLists.txt  Makefile  camera.cpp  example.cpp  geometry.cpp  light.cpp  main  main.cpp  main_raytracer.cpp  mesh.cpp  parser.cpp  ppm.cpp  raytracer.cpp  sphere.cpp  test.cpp  tracer.cpp  triangle.cpp
test/: .gitignore  CMakeLists.txt  camera_test.cpp  cosine.py  geometry_test.cpp  mesh_test.cpp  sphere_test.cpp  triangle_test.cpp
utils/: main  main.cpp  parser.cpp  parser.h
